--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -58,6 +58,10 @@ on fs
     mkdir /mnt/vendor/persist/haptics 0755 system system
     # Clean out sensor_temperature from the sensor list
     start vendor.sensors_fixup
+    chmod 0664 /sys/class/thermal/thermal_message/sconfig
+    chown system system /sys/class/thermal/thermal_message/sconfig
+    chmod 0666 /sys/class/thermal/thermal_message/temp_state
+    chown system system /sys/class/thermal/thermal_message/temp_state
 
 on post-fs
     write /dev/ipa 1
@@ -75,6 +79,8 @@ on post-fs-data
     mkdir /persist/qti_fp 0700 system system
     mkdir /data/vendor/nnhal 0700 system system
     mkdir /data/vendor/mac_addr 0771 system system
+    mkdir /data/vendor/thermal 0771 root system
+    mkdir /data/vendor/thermal/config 0771 root system
 
 on boot
     chown system system /sys/class/drm/card0-DSI-1/disp_param
